{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 46,
  "lineage": "eebda9b1-5f69-185c-8547-493a4c6b31b8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd200a166a2b96f1",
            "arn": "arn:aws:ec2:ca-central-1:975050024946:elastic-ip/eipalloc-0dd200a166a2b96f1",
            "domain": "vpc",
            "id": "eipalloc-0dd200a166a2b96f1",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-16-52-238-205.ca-central-1.compute.amazonaws.com",
            "public_ip": "16.52.238.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-nat-eip",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-nat-eip",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:975050024946:internet-gateway/igw-04886c4dc64460fd7",
            "id": "igw-04886c4dc64460fd7",
            "owner_id": "975050024946",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-igw",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-igw",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            },
            "vpc_id": "vpc-0328b537efd6b05fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd200a166a2b96f1",
            "association_id": "eipassoc-0cf8ecaff3ac55b2f",
            "connectivity_type": "public",
            "id": "nat-0316c88da4683d10d",
            "network_interface_id": "eni-07ef860654701bda6",
            "private_ip": "10.1.0.202",
            "public_ip": "16.52.238.205",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e3a6967470401a7",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-nat",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-nat",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:975050024946:route-table/rtb-0528b37c6325e56e5",
            "id": "rtb-0528b37c6325e56e5",
            "owner_id": "975050024946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0316c88da4683d10d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-private-rt",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-private-rt",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0328b537efd6b05fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:975050024946:route-table/rtb-0b698216c92b6ade8",
            "id": "rtb-0b698216c92b6ade8",
            "owner_id": "975050024946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04886c4dc64460fd7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-public-rt",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-public-rt",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0328b537efd6b05fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f48ac4b6ce80267",
            "route_table_id": "rtb-0528b37c6325e56e5",
            "subnet_id": "subnet-02acf7f967237e540"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0300ec26e1e41cb65",
            "route_table_id": "rtb-0528b37c6325e56e5",
            "subnet_id": "subnet-03d2574a1b54294be"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcb752e7fb59c5da",
            "route_table_id": "rtb-0b698216c92b6ade8",
            "subnet_id": "subnet-04e3a6967470401a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e727c919a2733281",
            "route_table_id": "rtb-0b698216c92b6ade8",
            "subnet_id": "subnet-0e3e53008e6248b77"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:975050024946:subnet/subnet-02acf7f967237e540",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02acf7f967237e540",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-private-ca-central-1a",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-private-ca-central-1a",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0328b537efd6b05fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:975050024946:subnet/subnet-03d2574a1b54294be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d2574a1b54294be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-private-ca-central-1b",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-private-ca-central-1b",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0328b537efd6b05fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:975050024946:subnet/subnet-04e3a6967470401a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e3a6967470401a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-public-ca-central-1a",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-public-ca-central-1a",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0328b537efd6b05fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:975050024946:subnet/subnet-0e3e53008e6248b77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3e53008e6248b77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-public-ca-central-1b",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-public-ca-central-1b",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0328b537efd6b05fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:975050024946:vpc/vpc-0328b537efd6b05fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07d7dc05c4b4c3518",
            "default_route_table_id": "rtb-0519eadfb700a80e8",
            "default_security_group_id": "sg-07d7804fd7ada5084",
            "dhcp_options_id": "dopt-028b2177f5fa5a818",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0328b537efd6b05fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0519eadfb700a80e8",
            "owner_id": "975050024946",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-vpc",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "slab-ai-dev-dev-vpc",
              "Project": "slab-ai",
              "Repository": "https://github.com/Kartik27baliyan/Slab.ai-EdTech-platform-"
            }
          }
        }
      ]
    }
  ]
}